@@ -53,7 +53,7 @@ sub _canonicalRdata {
     my $self=shift;
     my $rdata = "";
     if (exists $self->{"madname"}) {
-		$rdata .= $self->_name2wire($self->{"madname"});
+		$rdata .= $self->_name2wire(lc($self->{"madname"}));
 	}
 	return $rdata;
 }
